@@ -9,7 +9,7 @@ except ImportError:
     sys.exit()
 from glob import glob
 
-f = open('version')
+f = open('ailurus/version')
 version = f.read().strip()
 f.close()
 
@@ -37,7 +37,7 @@ Features:
       license = 'GPLv2+',
       platforms = ['linux'],
       packages = ['ailurus', 'ailurus.common', 'ailurus.gnome', 'ailurus.fedora', 'ailurus.ubuntu', 'ailurus.support', ],
-      package_data={'ailurus': ['native_apps']},
+      package_data={'ailurus': ['native_apps', 'version']},
       data_files = [
         ('share/man/man1/', ['ailurus.1']),
         ('share/applications/', ['ailurus.desktop']),
