@@ -1,3 +1,7 @@
+2010-06-04 Homer Xing <homer.xing@gmail.com>
+
+    * Improve architecture. Do not need to manually update AILURUS_VERSION.
+
 2010-06-02 Homer Xing <homer.xing@gmail.com>
 
     * Do not interrupt installation process if download() failed
